Wed Apr 10 18:05:30 2002  Jonathan Blandford  <jrb@gnome.org>

	* sound.desktop.in (Exec): s/gnome2/gnome

2002-03-27  Richard Hestilow  <hestilow@ximian.com>

	* sound-properties.glade: Add mnemonics.

	* sound-properties-capplet.c (create_dialog): Connect to
	properties so we know when to save.

2002-03-27  Richard Hestilow  <hestilow@ximian.com>

	* sound-properties.glade: Add mnemonics.

	* sound-properties-capplet.c (create_dialog): Connect to
	properties so we know when to save.

2002-03-10  Seth Nickell  <snickell@stanford.edu>

	* main.c: (main):
	* sound-properties-capplet.c: (main):

	Activate the settings daemon if its not already running.
	
2002-03-07  Richard Hestilow  <hestilow@ximian.com>
	
	* sound-properties-capplet.c (main): Okay, so I'm an idiot.

2002-03-06  Richard Hestilow  <hestilow@ximian.com>

	* sound-properties-capplet.c (main): Remove textdomain stuff.
	I'm not 100% certain this is correct, but none of the other capplets
	have it.
	
2002-03-07  Lauris Kaplinski  <lauris@ximian.com>

	* sound-properties-capplet.c: Do not include unused <esd.h>

2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>

	* sound-properties-capplet.c: s/PACKAGE/GETTEXT_PACKAGE/g

2002-02-11  Seth Nickell  <snickell@stanford.edu>

	* sound-properties-capplet.c: (setup_dialog),
	(dialog_button_clicked_cb), (main):

	Convert to instant apply.

2002-02-04  Lauris Kaplinski  <lauris@ximian.com>

	* sound-properties-capplet.c (create_dialog): Use g_object_set_data,
	use g_signal_connect
	(dialog_button_clicked_cb): GtkDialog instead of GnomeDialog
	(create_dialog): Use gtk_widget_set_size_request

2002-01-27  Seth Nickell  <snickell@stanford.edu>

	* sound.desktop.in:

	Add categories field to .desktop file.

2002-01-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:

	Install icons into the pixmaps directory so the Panel
	& Nautilus will pick up on them.

2002-01-14  Bradford Hovinen  <hovinen@ximian.com>
