@@ -1,3 +1,12 @@
+2002-05-08  Jody Goldberg <jody@gnome.org>
+
+	* sound-properties-capplet.c (dialog_button_clicked_cb) : fix help path
+
+2002-05-07  Jody Goldberg <jody@gnome.org>
+
+	* sound-properties-capplet.c (main) : add help.
+	(dialog_button_clicked_cb) : support help and support WM based exit.
+
 Wed Apr 10 18:05:30 2002  Jonathan Blandford  <jrb@gnome.org>
 
 	* sound.desktop.in (Exec): s/gnome2/gnome
